--- a/index.html
+++ b/index.html
@@ -2,7 +2,28 @@
 
 <html>
     <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Karishma's corner</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 <!-- Your HTML Here -->
+<body>
+    <!-- Main Content -->
+    <div class="container">
+        <div class="welcome-section">
+            <div class="welcome-text">
+                <h1 class="welcome-heading-1">Karishma Kamalahasan</h1>
+                <h2 class="welcome-heading-2">Soham <br>
+                    weds<br>
+                    Sai Priya<br></h2>
+                <div class="welcome-instructions-shadow">
+                <p class="welcome-instructions">We are thrilled to celebrate the union of Sai Priya and Soham! To make gift-giving easier and more meaningful, we've created a wishlist of items they'd love to receive. 
+
+                    Whether you're a family member, friend, or well-wisher, explore the curated selection to find the perfect gift that truly reflects their style and needs. Your thoughtful contribution will be cherished and appreciated.
+                    
+                    Thank you for being a part of this special occasion!</p></div>
+            </div>
+        </div>
+    </div>
 </html>
