--- a/index.html
+++ b/index.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
-
-<html>
-    <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karishma's corner</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-<!-- Your HTML Here -->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Karishma's Corner</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-    <!-- Main Content -->
     <div class="container">
-        <div class="welcome-section">
-            <div class="welcome-text">
-                <h1 class="welcome-heading-1">Karishma Kamalahasan</h1>
-                <h2 class="welcome-heading-2">Soham <br>
-                    weds<br>
-                    Sai Priya<br></h2>
-                <div class="welcome-instructions-shadow">
-                <p class="welcome-instructions">We are thrilled to celebrate the union of Sai Priya and Soham! To make gift-giving easier and more meaningful, we've created a wishlist of items they'd love to receive. 
-
-                    Whether you're a family member, friend, or well-wisher, explore the curated selection to find the perfect gift that truly reflects their style and needs. Your thoughtful contribution will be cherished and appreciated.
-                    
-                    Thank you for being a part of this special occasion!</p></div>
+        <div class="card">
+            <h1>Karishma's Corner</h1>
+            <div class="profile-img">
+                <img src="/images/Karishma-image.png" alt="Karishma's Photo">
             </div>
+            <p class="intro">Hi, I am Karishma. I am a 2nd-year CS major. I am from India but have lived in Dubai all my life.</p>
+            <p class="passion">I am passionate about using technology to make a positive impact on society. Last year, I actively volunteered with Hindu YUVA, organizing socio-cultural activities and community outreach events like sandwich-making and blood drives. This experience reinforced my commitment to creating meaningful change through both my technical skills and community involvement.</p>
+            <button class="btn">Join the Adventure</button>
         </div>
     </div>
+</body>
 </html>
