--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
                 <img src="/images/Karishma-image.png" alt="Karishma's Photo">
             </div>
             <p class="intro">Hi, I am Karishma. I am a 2nd-year CS major. I am from India but have lived in Dubai all my life.</p>
-            <p class="passion">I am passionate about using technology to make a positive impact on society. Last year, I actively volunteered with Hindu YUVA, organizing socio-cultural activities and community outreach events like sandwich-making and blood drives. This experience reinforced my commitment to creating meaningful change through both my technical skills and community involvement.</p>
-            <button class="btn">Join the Adventure</button>
+            <p class="passion">I find immense joy in working with nonprofits, supporting children, and promoting sustainability. These experiences have highlighted how meaningful and impactful our efforts can be. Whether it's aiding in education for children or leading environmental projects, making a positive difference truly motivates and inspires me. I’m excited to bring this passion to Bits of Good and continue making a meaningful impact!</p>
+            <button class="btn">CLICK ME!</button>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
