--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="/images/Karishma-image.png" alt="Karishma's Photo">
             </div>
             <p class="intro">Hi, I am Karishma. I am a 2nd-year CS major. I am from India but have lived in Dubai all my life.</p>
-            <p class="passion">I find immense joy in working with nonprofits, supporting children, and promoting sustainability. These experiences have highlighted how meaningful and impactful our efforts can be. Whether it's aiding in education for children or leading environmental projects, making a positive difference truly motivates and inspires me. I’m excited to bring this passion to Bits of Good and continue making a meaningful impact!</p>
+            <p class="passion">I find immense joy in aiding projects related to education for children, leading environmental and sustainable efforts, so making a positive difference truly motivates and inspires me. My experiences with such efforts in the past have highlighted how meaningful and impactful our efforts can be. I’m excited to bring this passion to Bits of Good and continue making a meaningful impact!</p>
             <button class="btn">CLICK ME!</button>
         </div>
     </div>
