--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="card">
             <h1>Karishma's Corner</h1>
             <div class="profile-img">
-                <img src="/Karishma-image.png" alt="Karishma's Photo">
+                <img src="https://github.com/kk-2205/SPRING2024_BITSOFGOOD_ASSESSMENT/blob/main/Karishma-image.png" alt="Karishma's Photo">
             </div>
             <p class="intro">Hi, I am Karishma. I am a 2nd-year CS major. I am from India but have lived in Dubai all my life.</p>
             <p class="passion">I find immense joy in aiding projects related to education for children, leading environmental and sustainable efforts, so making a positive difference truly motivates and inspires me. My experiences with such efforts in the past have highlighted how meaningful and impactful our efforts can be. I’m excited to bring this passion to Bits of Good and continue making a meaningful impact!</p>
